--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,17 @@
 [theme]
+# Primary accent for interactive elements
 primaryColor = "#575fe8"
+
+# Background color for the main content area
 backgroundColor = "#f5f7f3"
+
+# Background color for sidebar and most interactive widgets
 secondaryBackgroundColor = "#c9eab8"
+
+# Color used for almost all text
 textColor = "#262730"
+
+# Font family for all text in the app, except code blocks
+# Accepted values (serif | sans serif | monospace) 
+# Default: "sans serif"
 font = "sans serif"
