--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,10 +3,10 @@
 primaryColor = "#575fe8"
 
 # Background color for the main content area
-backgroundColor = "#34A5E5"
+backgroundColor = "#f5f7f3"
 
 # Background color for sidebar and most interactive widgets
-secondaryBackgroundColor = "#34A5E5"
+secondaryBackgroundColor = "#c9eab8"
 
 # Color used for almost all text
 textColor = "#262730"
